# HadronUnix

./: .gitignore  CMakeLists.txt  Makefile  bochsrc.bxrc  bochsrc_hdd.bxrc  bochsrc_linux.bxrc  bochsrc_linux_hdd.bxrc  boot.ini  bx_enh_dbg.ini
.old/: mmap_dump.c  test_driver.c  test_driver.h  vfs.c  vfs.h
.old/interrupt/: idt.c  idt.h  pic.h
boot/: CMakeLists.txt  Makefile
boot/stage1/: CMakeLists.txt  Makefile  linker.ld
boot/stage1/src/: drive.asm  gdt.asm  main.asm  memory.asm  screen.asm  strings.asm
boot/stage2/: CMakeLists.txt  Makefile  linker.ld
boot/stage2/src/: bootopts.c  bootopts.h  init.asm  init.h  main.c  string.c  string.h
boot/stage2/src/drive/: drive.asm  drive.c  drive.h
boot/stage2/src/elf/: elf64.h  elf_loader.c  elf_loader.h
boot/stage2/src/fat32/: fat32.c  fat32.h  mbr.h
boot/stage2/src/ini/: ini.c  ini.h
boot/stage2/src/interrupt/: idt.c  idt.h  pic.c
boot/stage2/src/longmode/: longmode.asm  longmode.h
boot/stage2/src/mmap/: mmap.asm  mmap.c  mmap.h
boot/stage2/src/realmode/: realmode.asm  realmode.c  realmode.h
boot/stage2/src/sys/: io.c  io.h
boot/stage2/src/vga/: vga.h
boot/stage2/src/vga_basic/: vga.c
boot/stage2/src/video/: gfx_query.c  gfx_query.h  video.asm  video.c  video.h
common/: bios_mmap.h  bootinfo.h
host_tests/: CMakeLists.txt
host_tests/src/: buddy_alloc.c  buddy_alloc.h  devfs.c  devfs.h  kstdio.h  main.c  memmap.c  memmap.h  tarfs.c  tarfs.h  tmpfs.c  tmpfs.h  vfs.c  vfs.h
initrd/kernel/: linker.ld
initrd/kernel/src/: kfmt.h  main.c  string.c
initrd/kernel/src/gdt/: gdt.asm  gdt.c
initrd/kernel/src/interrupts/: idt.c  idt.h  pic.c
initrd/kernel/src/memory/: buddy_alloc.h  halloc.c  halloc.h  memmap.c  memmap.h  paging.c  paging.h  palloc.c  palloc.h
initrd/kernel/src/sys/: io.c
initrd/kernel/src/vfs/: tarfs.h
initrd/usr/: bruh.txt
kernel/: Makefile  linker.ld  main.c
kernel/src/: entry.asm  kfmt.c  main.c  panic.c  panic.h  string.c  string.h
kernel/src/gdt/: gdt.asm  gdt.h
kernel/src/interrupts/: exception.asm  exception.c  exception.h  idt.c  idt.h
kernel/src/memory/: buddy_alloc.c  halloc.c  halloc.h  memmap.h  paging.asm  paging.c  paging.h  palloc.c  palloc.h
kernel/src/vfs/: devfs.c  devfs.h  kstdio.c  tarfs.c  tmpfs.c  tmpfs.h  vfs.c  vfs.h
kernel/src/vga/: vga.c  vga.h
kernel/src/vga_basic/: vga.c  vga.h
tools/: binary_utils.sh  create_boot_image.sh  fill_stage2_header.sh
